--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div>hello world!</div>
+    <section>main section</section>
+    <footer>footer!!</footer>
+  </body>
 </html>
